use kate from the right virtual desktop

BUG: 486066